--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "make": "electron-forge make",
     "publish": "electron-forge publish",
     "lint": "eslint --ext .ts,.tsx .",
-    "lint:info": "eslint src --ext .jsx,.js,.tsx,.ts --color || exit 0"
+    "lint:info": "eslint src --ext .jsx,.js,.tsx,.ts --color || exit 0",
+    "lint:fix": "eslint src --ext .jsx,.js,.tsx,.ts --color --fix || exit 0"
   },
   "keywords": [],
   "author": {
@@ -75,15 +76,15 @@
     "@electron-forge/maker-squirrel": "^6.0.0-beta.63",
     "@electron-forge/maker-zip": "^6.0.0-beta.63",
     "@electron-forge/plugin-webpack": "^6.0.0-beta.63",
-    "@types/react": "^18.0.10",
+    "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
-    "@typescript-eslint/eslint-plugin": "^5.27.0",
-    "@typescript-eslint/parser": "^5.27.0",
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "@typescript-eslint/parser": "^5.27.1",
     "@vercel/webpack-asset-relocator-loader": "^1.7.2",
     "css-loader": "^6.7.1",
-    "electron": "19.0.1",
+    "electron": "19.0.4",
     "electron-devtools-installer": "^3.2.0",
-    "eslint": "^8.16.0",
+    "eslint": "^8.17.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
@@ -96,28 +97,29 @@
     "prettier": "^2.6.2",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.3.0",
-    "typescript": "~4.7.2"
+    "ts-node": "^10.8.1",
+    "typescript": "~4.7.3"
   },
   "dependencies": {
-    "@blueprintjs/core": "^4.4.0",
+    "@blueprintjs/core": "^4.5.0",
     "@blueprintjs/icons": "^4.3.0",
-    "@blueprintjs/popover2": "^1.3.0",
-    "@blueprintjs/select": "^4.3.0",
+    "@blueprintjs/popover2": "^1.4.0",
+    "@blueprintjs/select": "^4.4.0",
     "@stanislavkarol/delay": "^1.0.3",
     "axios": "^0.27.2",
     "clsx": "^1.1.1",
     "dotenv": "^16.0.1",
     "electron-squirrel-startup": "^1.0.0",
-    "electron-store": "^8.0.1",
+    "electron-store": "^8.0.2",
     "mobx": "^6.6.0",
     "mobx-react-lite": "^3.4.0",
     "node-html-parser": "^5.3.3",
     "normalize": "^0.3.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-hook-form": "^7.31.3",
+    "react-hook-form": "^7.32.0",
     "react-router-dom": "^6.3.0",
     "snoowrap": "^1.23.0",
-    "telegraf": "^4.8.3"
+    "telegraf": "^4.8.5"
   }
 }
