--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "media-download",
-  "productName": "media-download",
+  "name": "video-download",
+  "productName": "video-download",
   "version": "0.0.5",
   "description": "Приложение для скачивания медиа с различных хостингов",
   "main": ".webpack/main",
@@ -107,6 +107,7 @@
     "@blueprintjs/select": "^4.4.0",
     "@stanislavkarol/delay": "^1.0.3",
     "axios": "^0.27.2",
+    "axios-cookiejar-support": "^4.0.2",
     "clsx": "^1.1.1",
     "dotenv": "^16.0.1",
     "electron-squirrel-startup": "^1.0.0",
@@ -120,6 +121,7 @@
     "react-hook-form": "^7.32.0",
     "react-router-dom": "^6.3.0",
     "snoowrap": "^1.23.0",
-    "telegraf": "^4.8.5"
+    "telegraf": "^4.8.5",
+    "tough-cookie": "^4.0.0"
   }
 }
