--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "keywords": [],
   "author": {
     "name": "Stanislav Karol",
-    "email": "slsinitsin@gmail.com"
+    "email": "stnslvkarol@gmail.com"
   },
   "license": "MIT",
   "config": {
