--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "media-download",
   "productName": "media-download",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "Приложение для скачивания медиа с различных хостингов",
   "main": ".webpack/main",
   "scripts": {
@@ -76,51 +76,52 @@
     "@electron-forge/maker-squirrel": "^6.0.0-beta.64",
     "@electron-forge/maker-zip": "^6.0.0-beta.64",
     "@electron-forge/plugin-webpack": "^6.0.0-beta.64",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
-    "@typescript-eslint/eslint-plugin": "^5.29.0",
-    "@typescript-eslint/parser": "^5.29.0",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.30.5",
+    "@typescript-eslint/parser": "^5.30.5",
     "@vercel/webpack-asset-relocator-loader": "^1.7.2",
     "css-loader": "^6.7.1",
-    "electron": "19.0.5",
+    "electron": "19.0.8",
     "electron-devtools-installer": "^3.2.0",
-    "eslint": "^8.18.0",
+    "eslint": "^8.19.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-jsx-a11y": "^6.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "fork-ts-checker-webpack-plugin": "^7.2.11",
     "node-loader": "^2.0.0",
     "prettier": "^2.7.1",
     "style-loader": "^3.3.1",
-    "ts-loader": "^9.3.0",
-    "ts-node": "^10.8.1",
+    "ts-loader": "^9.3.1",
+    "ts-node": "^10.8.2",
     "typescript": "~4.7.4"
   },
   "dependencies": {
-    "@blueprintjs/core": "^4.5.1",
-    "@blueprintjs/icons": "^4.3.0",
-    "@blueprintjs/popover2": "^1.4.1",
-    "@blueprintjs/select": "^4.4.1",
+    "@blueprintjs/core": "^4.6.0",
+    "@blueprintjs/icons": "^4.3.1",
+    "@blueprintjs/popover2": "^1.4.2",
+    "@blueprintjs/select": "^4.4.2",
     "@stanislavkarol/delay": "^1.0.3",
     "axios": "^0.27.2",
-    "clsx": "^1.1.1",
+    "clsx": "^1.2.1",
     "dotenv": "^16.0.1",
-    "electron-log": "^4.4.7",
+    "electron-log": "^4.4.8",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^8.0.2",
-    "mobx": "^6.6.0",
+    "mobx": "^6.6.1",
     "mobx-react-lite": "^3.4.0",
     "node-html-parser": "^5.3.3",
     "normalize": "^0.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.32.2",
+    "react-hook-form": "^7.33.1",
     "react-router-dom": "^6.3.0",
     "snoowrap": "^1.23.0",
-    "telegraf": "^4.8.5"
+    "telegraf": "^4.8.5",
+    "ytdl-core": "^4.11.0"
   }
 }
