--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,7 +29,10 @@
     ],
     "no-use-before-define": "off",
     "@typescript-eslint/no-use-before-define": [
-      "error"
+      "error",
+      {
+        "functions": false
+      }
     ],
     "no-shadow": "off",
     "@typescript-eslint/no-shadow": [
